--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-inappmessaging:19.1.1'
     implementation 'com.google.firebase:firebase-inappmessaging-display:19.1.1'
     implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
 }
